--- a/css/style.css
+++ b/css/style.css
@@ -1,9 +1,13 @@
-/* body{
-margin: 1.5em;
-} */
 
-table, td, th{
+
+table, td{
   margin: 1.5em;
   padding: 10px;
+  border: 1px solid;
+}
+th{
+  margin: 1.5em;
+  padding: 10px;
+  font-weight: bold;
   border: 1px solid;
 }
