--- a/css/style.css
+++ b/css/style.css
@@ -1,10 +1,55 @@
+header{
+  
+  display: flex;
+  background-color: #755C54;
+}
+h1, h2{
+  font-family: 'Kdam Thmor Pro', sans-serif;
+  margin: 30px;
 
+}
+header img{
+  display: flex;
+  width: 300px;
+}
+body{
+  background-color: #F58968;
+}
+div{
+  width: 90%;
+  display: flex;
+  margin: 30px;
+}
+figure {
+  border: thin black solid;
+  display: flex;
+  flex-flow: column;
+  padding: 5px;
+  max-width: 220px;
+  margin: auto;
+}
+
+figure img {
+  max-width: 220px;
+  max-height: 150px;
+}
+
+figcaption {
+  padding: 3px;
+  text-align: center;
+  background-color: #755C54;
+}
+
+#contest{
+  background-color: #C26C51;
+}
 
 table, td{
   margin: 1.5em;
   padding: 10px;
   border: 1px solid;
 }
+
 th{
   margin: 1.5em;
   padding: 10px;
